--- a/src/scss/sections/keyvisual.scss
+++ b/src/scss/sections/keyvisual.scss
@@ -6,8 +6,13 @@
   align-items: center;
   grid-template-columns: 1fr 1.15fr;
   gap: fluid-rem(1rem, 4rem);
-  background: url("../images/background-top.svg") no-repeat left
-    calc(50vw + max(1.5rem, 50vw - var(--container) / 2)) top 0% / auto 80%;
+  background: url("../images/bg-desktop-pattern.svg") no-repeat right
+    calc(-5% + max(1.5rem, 50vw - var(--container) / 2)) top 0% / auto 90%;
+
+  @media screen and (max-width: 1100px) {
+    background: url("../images/background-top.svg") no-repeat left
+      calc(50vw + max(1.5rem, 50vw - var(--container) / 2)) top 0% / auto 80%;
+  }
 
   @media screen and (max-width: 820px) {
     padding-block-start: calc(var(--header-height) + 1rem);
