--- a/src/partials/social.html
+++ b/src/partials/social.html
@@ -1,26 +1,26 @@
 <ul class="social {{ classname }}">
   <li class="social__item">
-    <a class="social__link" aria-label="facebook">
+    <a class="social__link" title="facebook">
       <icon src="./images/icon-facebook.svg" class="social__icon"></icon>
     </a>
   </li>
   <li class="social__item">
-    <a class="social__link" aria-label="youtube">
+    <a class="social__link" title="youtube">
       <icon src="./images/icon-youtube.svg" class="social__icon"></icon>
     </a>
   </li>
   <li class="social__item">
-    <a class="social__link" aria-label="twitter">
+    <a class="social__link" title="twitter">
       <icon src="./images/icon-twitter.svg" class="social__icon"></icon>
     </a>
   </li>
   <li class="social__item">
-    <a class="social__link" aria-label="pinterest">
+    <a class="social__link" title="pinterest">
       <icon src="./images/icon-pinterest.svg" class="social__icon"></icon>
     </a>
   </li>
   <li class="social__item">
-    <a class="social__link" aria-label="instagram">
+    <a class="social__link" title="instagram">
       <icon src="./images/icon-instagram.svg" class="social__icon"></icon>
     </a>
   </li>
