--- a/src/partials/sections/testimonials.html
+++ b/src/partials/sections/testimonials.html
@@ -1,6 +1,6 @@
 <section class="section section--testimonials">
   <h2 class="section__title">What they’ve said</h2>
-  <div class="section__content splide" aria-label="testimonials">
+  <div class="section__content splide" role="group" aria-label="testimonials">
     <div class="splide__track">
       <ul class="splide__list">
         <include
