--- a/src/scss/sections/keyvisual.scss
+++ b/src/scss/sections/keyvisual.scss
@@ -6,24 +6,11 @@
   align-items: center;
   grid-template-columns: 1fr 1.15fr;
   gap: fluid-rem(1rem, 4rem);
-  background: url("../images/bg-desktop-pattern.svg") no-repeat right
-    calc(-5% + max(1.5rem, 50vw - var(--container) / 2)) top 0% / auto 90%;
-
-  @media screen and (max-width: 1100px) {
-    background: url("../images/background-top.svg") no-repeat left
-      calc(50vw + max(1.5rem, 50vw - var(--container) / 2)) top 0% / auto 80%;
-  }
+  overflow: hidden;
 
   @media screen and (max-width: 820px) {
     padding-block-start: calc(var(--header-height) + 1rem);
     grid-template-columns: 1fr;
-    background: url("../images/background-top.svg") no-repeat left 2rem top
-      calc(#{fluid-rem(-1rem, 10rem, 550 820)} * -1) / 100% auto;
-  }
-
-  @media screen and (max-width: 550px) {
-    background: url("../images/background-top.svg") no-repeat left 2rem top 0% /
-      100vw auto;
   }
 
   .section__title {
@@ -32,9 +19,19 @@
 
   .section__graphic {
     text-align: center;
+    position: relative;
 
     @media screen and (max-width: 820px) {
       order: -1;
+    }
+
+    &::before {
+      content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='814' height='814'%3E%3Crect width='436' height='970' x='774' y='-62' fill='%23FFF0EC' fill-rule='evenodd' rx='218' transform='rotate(45 718.814 -291.157)'/%3E%3C/svg%3E");
+      display: block;
+      z-index: -1;
+      left: 0;
+      bottom: 0;
+      position: absolute;
     }
 
     img {
